<resources>
    <string name="app_name">World Trick 23</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news">News</string>
    <string name="menu_battles">Online-battles</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_rank">Your rank</string>
    <string name="menu_health">Your health</string>
    <string name="menu_tutorials">Tutorials</string>
    <string name="menu_personal">Personal</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_search">Search</string>

    <string name="my_battles">My battles</string>
    <string name="no_network">No network</string>
    <string name="info_email_natice">You have been sent a message to your mail!</string>
    <string name="blocked_user">This user is blocked!</string>
    <string name="contact_support">Suggest to contact support.</string>
    <string name="email_not_exist">This email address does not exist!</string>
    <string name="close">Close</string>
    <string name="fill_fields">Fill the required fields</string>
    <string name="login">Login</string>
    <string name="login_"><u><b>Login*</b></u></string>
    <string name="password">Password</string>
    <string name="password_"><b><u>Password*</u></b></string>
    <string name="successfully_logged">You have successfully logged in!</string>
    <string name="hello">Hello, </string>
    <string name="user">The user</string>
    <string name="blocked">is blocked</string>
    <string name="incorrect_l_or_p">Entered login or password is incorrect!</string>
    <string name="in_stock">In stock: </string>
    <string name="didnt_order">You did not order anything!</string>
    <string name="yes">Yes</string>
    <string name="we_will_send">Your order will be shipped soon!</string>
    <string name="cancel">Cancel</string>
    <string name="copied">Copied</string>
    <string name="complaint_will_be_considered">Your complaint will be considered!</string>
    <string name="downloaded">Download complete!</string>
    <string name="successfully_regisrated">You have been successfully registered!</string>
    <string name="semifinal">Semifinal</string>
    <string name="finale">Final</string>
    <string name="round">Round</string>
    <string name="your_answer">Your turn</string>
    <string name="no_video">There is no video yet</string>
    <string name="upload">Upload</string>
    <string name="file_error">File error</string>
    <string name="uploading">Uploading</string>
    <string name="wait">Please, wait for the video uploaded</string>
    <string name="uploaded">Video uploaded</string>
    <string name="open_your_video">Open your video</string>
    <string name="open_opponent_video">Open opponent video</string>
    <string name="missing_video">video is missing yet</string>
    <string name="unknown_winner">unknown yet</string>
    <string name="no_battles">No battles</string>
    <string name="tricking">Tricking</string>
    <string name="parkour">Parkour</string>
    <string name="break_dance">Break-dance</string>
    <string name="trampoline">Trampoline freestyle</string>
    <string name="season">Season</string>
    <string name="view">View</string>
    <string name="expectation">Expectation</string>
    <string name="vs"> VS </string>
    <string name="group_battles">Group battles</string>
    <string name="individ_battles">Individual battles</string>
    <string name="you_are_down">You are down for the battle</string>
    <string name="you_late">Unfortunately you are too late</string>
    <string name="users_count">Number of users</string>
    <string name="judge">Judge</string>
    <string name="join">Join</string>
    <string name="no_one_recorded">While no one has joined.
        You can be the first.</string>
    <string name="cancelled">Cancelled</string>
    <string name="battle">Battle</string>
    <string name="you_challenged">You challenged</string>
    <string name="to_a_battle">to a battle</string>
    <string name="go_to_battle">Go to the page of the battle</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="you_were_challenged"> calling you to battle by</string>
    <string name="battles_in_process">The battles in process</string>
    <string name="challenged"> challenged you on </string>
    <string name="make_decision">Make a decision before </string>
    <string name="invalid_link">Invalid link</string>
    <string name="playback">Video playback</string>
    <string name="gallery_choose">Choose from gallery</string>
    <string name="shoot_video">Shoot video</string>
    <string name="winner">Winner</string>
    <string name="rank">Rank: </string>
    <string name="battles_count">Number of battles: </string>
    <string name="number_of_wins">Number of wins: </string>
    <string name="number_of_losses">Number of losses: </string>
    <string name="select_directions">Select the direction in which you want to participate in battles!</string>
    <string name="name">Name</string>
    <string name="name_"><u><b>Name*</b></u></string>
    <string name="surname">Surname</string>
    <string name="surname_">Surname*</string>
    <string name="patronymic">Patronymic</string>
    <string name="email">E-mail</string>
    <string name="email_"><b><u>E-mail*</u></b></string>
    <string name="birthday">Date of birth</string>
    <string name="birthday_example">YYYY-mm-dd</string>
    <string name="instagram">Instagram</string>
    <string name="about_oneself">About oneself</string>
    <string name="registration_date">Registration date</string>
    <string name="Save_settings">Save the settings</string>
    <string name="authentication">Authentication</string>
    <string name="forget_password">Forget your password?</string>
    <string name="sign_in">Sign up</string>
    <string name="registration">Registration</string>
    <string name="participate_in">Participate in:</string>
    <string name="full_address">Full address*</string>
    <string name="zip_code">Zip-Code</string>
    <string name="zip_code_">Zip-Code*</string>
    <string name="challenge_from">Сhallenges</string>
    <string name="enter_email">Enter your email address</string>
    <string name="recover">Recover</string>
    <string name="copy_ink">Copy link</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="download">Download</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="gather_battle">Gather for battle</string>
    <string name="category">Category</string>
    <string name="my_group_battles">My group battles</string>
    <string name="my_ind_battles">My individual battles</string>
    <string name="date">Date</string>
    <string name="nothing">nothing</string>
    <string name="saved">Saved</string>
    <string name="notices">Notifications</string>

    <string name="send">Send</string>
    <string name="comment_deleted">Comment deleted</string>
    <string name="low_rang">Not enough rank</string>
    <string name="phone_number">Phone number*</string>
    <string name="error">Error</string>
    <string name="rank_money">Rank</string>
    <string name="save_cart">Save shop cart</string>
    <string name="stream">Live broadcast</string>
    <string name="show_stream">Show live broadcasts</string>
    <string name="shop_notices">Shop notifications</string>
    <string name="content_settings">Content settings</string>

</resources>
