<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_notices"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/oboi_shapka"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/notices"
                        android:textColor="@color/colorWhite" />

                    <Switch
                        android:id="@+id/switch_newsChanges"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_news" />

                    <Switch
                        android:id="@+id/switch_indChanges"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/individ_battles" />

                    <Switch
                        android:id="@+id/switch_groupChanges"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/group_battles" />

                    <Switch
                        android:id="@+id/switch_shopNotices"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_notices" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_shop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/oboi_shapka"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/content_settings"
                        android:textColor="@color/colorWhite" />

                    <Switch
                        android:id="@+id/switch_shop_save_changes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save_cart" />

                    <Switch
                        android:id="@+id/switch_showStream"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_stream" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>