<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/autorizationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_gray"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_et"
            android:gravity="start"
            android:hint="@string/login"
            android:maxLines="5"
            android:text="asd"
            android:textColor="@color/colorSiteWhiteBlue"
            android:textColorHint="@color/colorGray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_et"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="5"
            android:text="asd"
            android:textColor="@color/colorSiteGreen"
            android:textColorHint="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="23dp"
            android:weightSum="100">

            <info.hoang8f.widget.FButton
                android:id="@+id/enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_weight="50"
                android:text="@string/log_in"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

            <info.hoang8f.widget.FButton
                android:id="@+id/newRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_weight="50"
                android:text="@string/sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="23dp"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>