<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@drawable/round_button_yolo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/orderList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSiteWhiteBlue"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/colorSiteRed"
                android:textSize="15sp"
                android:typeface="monospace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBlack" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSiteYolo"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/fill_fields"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:typeface="monospace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="200">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="125"
                    android:gravity="start"
                    android:padding="8dp"
                    android:text="@string/login"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <TextView
                    android:id="@+id/loginSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:inputType="none"
                    android:padding="8dp"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="8dp"
                android:text="@string/name_"
                android:textColor="@color/colorSiteYolo"
                android:textSize="15sp"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/nameSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/round_et" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="8dp"
                android:text="@string/surname_"
                android:textColor="@color/colorSiteYolo"
                android:textSize="15sp"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/secondNameSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/round_et" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="8dp"
                android:text="@string/patronymic"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/patronymicSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/round_et" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="8dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorSiteYolo"
                android:textSize="15sp"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/round_et"
                android:hint="+79998887766" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="8dp"
                android:text="@string/full_address"
                android:textColor="@color/colorSiteYolo"
                android:textSize="15sp"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/addressSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/round_et"
                android:hint="Russia, Moscow, street wt23, house 23, korpus 2, apartment number 3" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="8dp"
                android:text="@string/zip_code_"
                android:textColor="@color/colorSiteYolo"
                android:textSize="15sp"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/zipCodeSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/round_et" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="200">

                <Button
                    android:id="@+id/close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="100"
                    android:background="@drawable/round_button_red"
                    android:text="@string/close"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="100"
                    android:background="@drawable/round_button_green"
                    android:text="@string/yes"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>