<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">


    <HorizontalScrollView
        android:scrollbarThumbHorizontal="@drawable/round_button_yolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/shListTrick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_white"
                android:text="@string/tricking"
                android:textColor="@color/colorSiteGreen" />

            <Button
                android:id="@+id/shListPark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/round_button_white"
                android:text="@string/parkour"
                android:textColor="@color/colorSiteGreen" />

            <Button
                android:id="@+id/shListBreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/round_button_white"
                android:text="@string/break_dance"
                android:textColor="@color/colorSiteGreen" />

            <Button
                android:id="@+id/shListTramp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/round_button_white"
                android:text="@string/trampoline"
                android:textColor="@color/colorSiteGreen" />

        </LinearLayout>

    </HorizontalScrollView>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeAllInd"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/individAllBattlesLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:orientation="vertical"
                android:padding="8dp">


            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>